--- a/piccup-app/src/global/styles/vars.scss
+++ b/piccup-app/src/global/styles/vars.scss
@@ -5,6 +5,10 @@ $secondary-color: black;
   cursor: pointer;
 }
 
+.dont-click-me {
+  cursor: not-allowed; 
+}
+
 .x-align {
   position: absolute;
   left: 50%;
