finished basic CRUD actions for all of menu, thus completing menu

--- a/piccup-venue/src/global/styles/variables.sass
+++ b/piccup-venue/src/global/styles/variables.sass
@@ -8,6 +8,7 @@ $blue: #0D6797
 $menu-nav-index: 900
 $foot-nav-index: 900
 $create-shell-index: 901
+$create-nav-index: 902
 
 $menu-nav-height: 68px
 $nav-height: 48px
