starting to build out current orders

--- a/piccup-venue/src/global/styles/variables.sass
+++ b/piccup-venue/src/global/styles/variables.sass
@@ -5,8 +5,12 @@ $background-color: rgb(250, 250, 250)
 $red: #EC6F75
 $blue: #0D6797
 
-$menu-nav-index: 900
-$foot-nav-index: 900
+$main-nav-index: 900
+
+$order-nav-index: $main-nav-index
+$menu-nav-index: $main-nav-index
+$foot-nav-index: $main-nav-index
+
 $create-shell-index: 901
 $create-nav-index: 902
 
